# nso-oc-services

./: .gitignore  .releaserc  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: config_NETCONF.xml  config_NETCONF_full.xml  config_RESTCONF.json  config_RESTCONF.yml  config_interfaces_RESTCONF.yml  config_interfaces_router_RESTCONF.yml  config_interfaces_switch_RESTCONF.yml  config_system_NETCONF.xml  config_system_RESTCONF.yml  configure_router.yml  configure_switch.yml  router-PUT.yml  router_configure_bgp_global_example.yml  router_configure_bgp_neighbor_example.yml  router_configure_bgp_peergroup_example.yml  service-openconfig-interfaces-restconf-PATCH.yml  service-openconfig-interfaces-restconf-PUT.yml  service-openconfig-system-json-rpc.yml  service-openconfig-system-ncclient.py  service-openconfig-system-netconf.yml  service-openconfig-system-restconf-PATCH.yml  service-openconfig-system-restconf-PUT.yml  service-openconfig-system-restconf.py  service-openconfig-system-restconf.yml  service-openconfig-system.yaml  switch-PUT.yml  switch_configure_acl_example.yml  switch_configure_mpls_example.yml  switch_configure_static_routes_example.yml
mdd/: package-meta-data.xml
oc-interfaces-nso/: package-meta-data.xml
oc-system-nso/: README  package-meta-data.xml
package_nso_to_oc/: README.md  __init__.py  common.py  main.py
specs/: openconfig-interfaces.skel.yml  openconfig-system.skel.yaml
test/: README.md  ansible.cfg  ansible_dev.cfg  ansible_dev_nx.cfg  ansible_dev_xe.cfg  ansible_dev_xr.cfg  ansible_nx.cfg  ansible_xe.cfg  ansible_xr.cfg  (+8 more)
(+379 files in other folders)
